syntax = "proto3";
package messenger;

import "node_info.proto";
import "timestamp.proto";

option go_package = "ecos/edge-node/node";



message Term{
  uint64 Term = 1;
}

message GroupInfo{
  Term GroupTerm = 1;
  NodeInfo leader_info = 2;
  repeated NodeInfo nodes_info = 3;
  Timestamp update_timestamp = 4;
}
